--- a/image.html
+++ b/image.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <img class="pic1" src="/assets/css/x3.jpg">
+    <img class="pic1" src="\assets\css\x3.jpg">
 </body>
 </html>/
