--- a/image.html
+++ b/image.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <img class="pic1" src="/assets/css/1.png">
+    <img class="pic1" src="/assets/css/1.png"/>
 </body>
 </html>/
