--- a/image.html
+++ b/image.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>dsfsdfsdfd</title>
 </head>
 <body>
-    <img class="pic1" src="/assets/css/1.png" />
+    <img src="/assets/css/x3.jpg">
 </body>
 </html>/
