--- a/image.html
+++ b/image.html
@@ -5,6 +5,6 @@
     <title>dsfsdfsdfd</title>
 </head>
 <body>
-    <img src="/logo.png">
+    <img src="https://yoinffagmail.github.io/jekyll-theme-hamilton/logo.png">
 </body>
 </html>/
